# tkhar-service

./: .gitignore  Pipfile  ci.sh  setup.cfg  sync.sh
src/app/: main.py
src/entity/: request.py  response.py
src/model/: __init__.py  sequential_net.py  tkhar.py
src/model/config/: __init__.py  cfg_ds.py  structure.py
src/model/sequential_net/: __init__.py
src/model/spatial_net/: __init__.py  ntu.py
src/model/stream_spatial/: __init__.py  graph.py  ntu.py  util.py
src/model/stream_temporal/: __init__.py  add_norm.py  attension_fusion.py  encoder_block.py  multi_head_attention.py  position.py  position_wise_ffn.py  res_connection.py  self_attention.py  transformer.py
src/model/temporal_net/: __init__.py  add_norm.py  attension_fusion.py  encoder_block.py  multi_head_attention.py  position.py  position_wise_ffn.py  res_connection.py  self_attention.py  transformer.py
src/serve/: tkhar.py
src/util/: __init__.py  init_weight.py  processor.py  visualization.py
static/: pose.js
tests/app/: test_main.py
tests/model/: test_sequence.py
