[metadata]
name = tkhar-service

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3, <4
install_requires =
    pip>=21.1.1
    setuptools>=56.1.0
    autopep8>=1.5.7
    wheel>=0.36.2
    pytest>=6.2.4
    fastapi>=0.65.3
    uvicorn>=0.14.0
    numpy>=1.19.5
    torch